[gd_scene load_steps=17 format=4 uid="uid://ct6dj75chsipi"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_eak31"]
[ext_resource type="Texture2D" uid="uid://b01t0b25pae3j" path="res://assets/SGQ_ui/game_ui/hud.png" id="2_q1aak"]
[ext_resource type="Texture2D" uid="uid://c8fff2ixnte0" path="res://assets/SGQ_ui/button.png" id="2_u1awk"]
[ext_resource type="AudioStream" uid="uid://dn4r2y32egywo" path="res://assets/sfx/menu_select.wav" id="3_0h8o4"]
[ext_resource type="Texture2D" uid="uid://bf217dspv8ic4" path="res://assets/SGQ_ui/button_click.png" id="3_7i3ul"]
[ext_resource type="Texture2D" uid="uid://b1yf37j2u6aa" path="res://assets/SGQ_Dungeon/grounds_and_walls/grounds.png" id="3_bwpb5"]
[ext_resource type="Texture2D" uid="uid://dblsq7u2qlroh" path="res://assets/SGQ_ui/button_hover.png" id="3_f3310"]
[ext_resource type="Texture2D" uid="uid://cs2sgb38j8jmc" path="res://assets/SGQ_Dungeon/grounds_and_walls/surground.png" id="4_tp2br"]
[ext_resource type="FontFile" uid="uid://c02h7y0vgv76u" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="6_0vapl"]
[ext_resource type="FontFile" uid="uid://c3axct1sgq5jp" path="res://assets/fonts/fixedsys.ttf" id="8_6toul"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x83bm"]
texture = ExtResource("2_q1aak")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ym43i"]
texture = ExtResource("3_bwpb5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0

[sub_resource type="TileSet" id="TileSet_ejotr"]
sources/0 = SubResource("TileSetAtlasSource_x83bm")
sources/1 = SubResource("TileSetAtlasSource_ym43i")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jx2sk"]
texture = ExtResource("4_tp2br")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l5q51"]
texture = ExtResource("3_bwpb5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0

[sub_resource type="TileSet" id="TileSet_qxmcg"]
sources/0 = SubResource("TileSetAtlasSource_jx2sk")
sources/1 = SubResource("TileSetAtlasSource_l5q51")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_eak31")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAGAAUAAAABAAAAAAAGAAUAAAACAAAAAAAGAAUAAAADAAAAAAAGAAUAAAAEAAAAAAAGAAUAAAAFAAAAAAAGAAUAAAAGAAAAAAAGAAUAAAAHAAAAAAAGAAUAAAAIAAAAAAAGAAUAAAAJAAAAAAAGAAUAAAAKAAAAAAAGAAUAAAALAAAAAAAGAAUAAAALAAEAAAAGAAUAAAAMAAEAAAAGAAUAAAANAAEAAAAGAAUAAAAOAAEAAAAGAAUAAAAPAAEAAAAGAAUAAAAQAAEAAAAGAAUAAAARAAEAAAAGAAUAAAARAAAAAAAGAAUAAAAQAAAAAAAGAAUAAAAPAAAAAAAGAAUAAAAOAAAAAAAGAAUAAAANAAAAAAAGAAUAAAAMAAAAAAAGAAUAAAAAAAEAAAAGAAUAAAAAAAIAAAAGAAUAAAAAAAMAAAAGAAUAAAAAAAQAAAAGAAUAAAAAAAUAAAAGAAUAAAAAAAYAAAAGAAUAAAAAAAcAAAAGAAUAAAAAAAgAAAAGAAUAAAAAAAkAAAAGAAUAAAABAAkAAAAGAAUAAAACAAkAAAAGAAUAAAADAAkAAAAGAAUAAAAEAAkAAAAGAAUAAAAFAAkAAAAGAAUAAAAGAAkAAAAGAAUAAAAHAAkAAAAGAAUAAAAIAAkAAAAGAAUAAAAJAAkAAAAGAAUAAAAKAAkAAAAGAAUAAAALAAkAAAAGAAUAAAAMAAkAAAAGAAUAAAANAAkAAAAGAAUAAAAOAAkAAAAGAAUAAAAPAAkAAAAGAAUAAAAQAAkAAAAGAAUAAAARAAkAAAAGAAUAAAARAAgAAAAGAAUAAAARAAcAAAAGAAUAAAARAAYAAAAGAAUAAAARAAUAAAAGAAUAAAASAAUAAAAGAAUAAAASAAQAAAAGAAUAAAASAAMAAAAGAAUAAAARAAMAAAAGAAUAAAARAAIAAAAGAAUAAAD/////AAAGAAUAAAD//wAAAAAGAAUAAAD//wEAAAAGAAUAAAD//wIAAAAGAAUAAAD//wMAAAAGAAUAAAD//wQAAAAGAAUAAAD//wUAAAAGAAUAAAD//wYAAAAGAAUAAAD//wcAAAAGAAUAAAD//wgAAAAGAAUAAAD//wkAAAAGAAUAAAD//woAAAAGAAUAAAAAAP//AAAGAAUAAAAAAAoAAAAGAAUAAAABAP//AAAGAAUAAAABAAEAAAAGAAUAAAABAAIAAAAGAAUAAAABAAMAAAAGAAUAAAABAAQAAAAGAAUAAAABAAUAAAAGAAUAAAABAAYAAAAGAAUAAAABAAcAAAAGAAUAAAABAAgAAAAGAAUAAAABAAoAAAAGAAUAAAACAP//AAAGAAUAAAACAAEAAAAGAAUAAAACAAIAAAAGAAUAAAACAAMAAAAGAAUAAAACAAQAAAAGAAUAAAACAAUAAAAGAAUAAAACAAYAAAAGAAUAAAACAAcAAAAGAAUAAAACAAgAAAAGAAUAAAACAAoAAAAGAAUAAAADAP//AAAGAAUAAAADAAEAAAAGAAUAAAADAAIAAAAGAAUAAAADAAMAAAAGAAUAAAADAAQAAAAGAAUAAAADAAUAAAAGAAUAAAADAAYAAAAGAAUAAAADAAcAAAAGAAUAAAADAAgAAAAGAAUAAAADAAoAAAAGAAUAAAAEAP//AAAGAAUAAAAEAAEAAAAGAAUAAAAEAAIAAAAGAAUAAAAEAAMAAAAGAAUAAAAEAAQAAAAGAAUAAAAEAAUAAAAGAAUAAAAEAAYAAAAGAAUAAAAEAAcAAAAGAAUAAAAEAAgAAAAGAAUAAAAEAAoAAAAGAAUAAAAFAP//AAAGAAUAAAAFAAEAAAAGAAUAAAAFAAIAAAAGAAUAAAAFAAMAAAAGAAUAAAAFAAQAAAAGAAUAAAAFAAUAAAAGAAUAAAAFAAYAAAAGAAUAAAAFAAcAAAAGAAUAAAAFAAgAAAAGAAUAAAAFAAoAAAAGAAUAAAAGAP//AAAGAAUAAAAGAAEAAAAGAAUAAAAGAAIAAAAGAAUAAAAGAAMAAAAGAAUAAAAGAAQAAAAGAAUAAAAGAAUAAAAGAAUAAAAGAAYAAAAGAAUAAAAGAAcAAAAGAAUAAAAGAAgAAAAGAAUAAAAGAAoAAAAGAAUAAAAHAP//AAAGAAUAAAAHAAEAAAAGAAUAAAAHAAIAAAAGAAUAAAAHAAMAAAAGAAUAAAAHAAQAAAAGAAUAAAAHAAUAAAAGAAUAAAAHAAYAAAAGAAUAAAAHAAcAAAAGAAUAAAAHAAgAAAAGAAUAAAAHAAoAAAAGAAUAAAAIAP//AAAGAAUAAAAIAAEAAAAGAAUAAAAIAAIAAAAGAAUAAAAIAAMAAAAGAAUAAAAIAAQAAAAGAAUAAAAIAAUAAAAGAAUAAAAIAAYAAAAGAAUAAAAIAAcAAAAGAAUAAAAIAAgAAAAGAAUAAAAIAAoAAAAGAAUAAAAJAP//AAAGAAUAAAAJAAEAAAAGAAUAAAAJAAIAAAAGAAUAAAAJAAMAAAAGAAUAAAAJAAQAAAAGAAUAAAAJAAUAAAAGAAUAAAAJAAYAAAAGAAUAAAAJAAcAAAAGAAUAAAAJAAgAAAAGAAUAAAAJAAoAAAAGAAUAAAAKAP//AAAGAAUAAAAKAAEAAAAGAAUAAAAKAAIAAAAGAAUAAAAKAAMAAAAGAAUAAAAKAAQAAAAGAAUAAAAKAAUAAAAGAAUAAAAKAAYAAAAGAAUAAAAKAAcAAAAGAAUAAAAKAAgAAAAGAAUAAAAKAAoAAAAGAAUAAAALAP//AAAGAAUAAAALAAIAAAAGAAUAAAALAAMAAAAGAAUAAAALAAQAAAAGAAUAAAALAAYAAAAGAAUAAAALAAcAAAAGAAUAAAALAAgAAAAGAAUAAAALAAoAAAAGAAUAAAAMAP//AAAGAAUAAAAMAAIAAAAGAAUAAAAMAAMAAAAGAAUAAAAMAAQAAAAGAAUAAAAMAAUAAAAGAAUAAAAMAAYAAAAGAAUAAAAMAAcAAAAGAAUAAAAMAAgAAAAGAAUAAAAMAAoAAAAGAAUAAAANAP//AAAGAAUAAAANAAIAAAAGAAUAAAANAAMAAAAGAAUAAAANAAQAAAAGAAUAAAANAAUAAAAGAAUAAAANAAYAAAAGAAUAAAANAAcAAAAGAAUAAAANAAgAAAAGAAUAAAANAAoAAAAGAAUAAAAOAP//AAAGAAUAAAAOAAIAAAAGAAUAAAAOAAMAAAAGAAUAAAAOAAQAAAAGAAUAAAAOAAUAAAAGAAUAAAAOAAYAAAAGAAUAAAAOAAcAAAAGAAUAAAAOAAgAAAAGAAUAAAAOAAoAAAAGAAUAAAAPAP//AAAGAAUAAAAPAAIAAAAGAAUAAAAPAAMAAAAGAAUAAAAPAAQAAAAGAAUAAAAPAAUAAAAGAAUAAAAPAAYAAAAGAAUAAAAPAAcAAAAGAAUAAAAPAAgAAAAGAAUAAAAPAAoAAAAGAAUAAAAQAP//AAAGAAUAAAAQAAIAAAAGAAUAAAAQAAMAAAAGAAUAAAAQAAQAAAAGAAUAAAAQAAUAAAAGAAUAAAAQAAYAAAAGAAUAAAAQAAcAAAAGAAUAAAAQAAgAAAAGAAUAAAAQAAoAAAAGAAUAAAARAP//AAAGAAUAAAARAAQAAAAGAAUAAAARAAoAAAAGAAUAAAASAP//AAAGAAUAAAASAAAAAAAGAAUAAAASAAEAAAAGAAUAAAASAAIAAAAGAAUAAAASAAYAAAAGAAUAAAASAAcAAAAGAAUAAAASAAgAAAAGAAUAAAASAAkAAAAGAAUAAAASAAoAAAAGAAUAAAALAAUAAAABAAUAAAA=")
tile_set = SubResource("TileSet_ejotr")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAAKAAYAAAAJAAcAAAALAAYAAAALAAYAAAAHAAYAAAAJAAcAAAAGAAYAAAAIAAcAAAAIAAYAAAAJAAcAAAAJAAYAAAAJAAcAAAALAAUAAAALAAUAAAAKAAUAAAACAAUAAAAJAAUAAAACAAUAAAAIAAUAAAACAAUAAAAHAAUAAAACAAUAAAAGAAUAAAAIAAUAAAALAAcAAAAJAAcAAAAGAAgAAAAIAAgAAAAHAAgAAAAJAAgAAAALAAgAAAALAAgAAAAJAAgAAAAJAAgAAAAIAAgAAAAJAAgAAAAGAAcAAAAIAAcAAAAHAAcAAAAJAAcAAAAIAAcAAAAJAAcAAAAJAAcAAAAJAAcAAAAKAAcAAAAJAAcAAAAKAAgAAAAKAAgAAAA=")
tile_set = SubResource("TileSet_qxmcg")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-7.62939e-06, 0)
stream = ExtResource("3_0h8o4")

[node name="Start" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 86.0
offset_right = 165.0
offset_bottom = 126.0
scale = Vector2(1.4, 1.2)
texture_normal = ExtResource("2_u1awk")
texture_pressed = ExtResource("3_7i3ul")
texture_hover = ExtResource("3_f3310")

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 125.0
offset_top = 103.0
offset_right = 299.0
offset_bottom = 115.0
scale = Vector2(1.4, 1.2)
texture_normal = ExtResource("2_u1awk")
texture_pressed = ExtResource("3_7i3ul")
texture_hover = ExtResource("3_f3310")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(144, 86)
zoom = Vector2(4, 4)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 89.0
offset_right = 210.0
offset_bottom = 112.0
scale = Vector2(0.28, 0.399998)
theme_override_fonts/font = ExtResource("6_0vapl")
text = "start"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 106.0
offset_right = 195.0
offset_bottom = 129.0
scale = Vector2(0.28, 0.4)
theme_override_fonts/font = ExtResource("6_0vapl")
text = "quit"

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 8.0
offset_right = 121.0
offset_bottom = 31.0
scale = Vector2(3.21659, 2.06529)
theme_override_colors/font_color = Color(0.907942, 0.907942, 0.907942, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_6toul")
text = "ATMOS"

[node name="SubTitle" type="Label" parent="Title"]
layout_mode = 0
offset_left = -24.6891
offset_top = 15.9368
offset_right = 413.311
offset_bottom = 38.9368
scale = Vector2(0.204126, 0.360864)
theme_override_fonts/font = ExtResource("8_6toul")
text = " Echoes of the Eternal Dungeon"
horizontal_alignment = 1

[connection signal="button_up" from="Start" to="." method="_on_start_button_up"]
[connection signal="mouse_entered" from="Start" to="." method="_on_start_mouse_entered"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
